@@ -21,7 +21,9 @@ public:
 // Attributes
 public:
 	BOOL m_bZoomPreview;
-	void SetPieceInfo(PieceInfo* pInfo);
+	void SetPieceInfo (PieceInfo* pInfo);
+	PieceInfo* GetPieceInfo () const
+    { return m_pPieceInfo; }
 
 // Operations
 public:
